bst analysis clarificaiton

--- a/_docs/weekly/wk10.md
+++ b/_docs/weekly/wk10.md
@@ -16,14 +16,14 @@ On this page:
 ##### Essential Questions
 Before attending class, please complete the material below and use the following questions to guide your note-taking:  
 <br>
-✔️ What is the worst time complexity of inserting into a BST?  
-✔️ What is the worst time complexity of deleting from a BST?  
-✔️ What is the worst time complexity of searching a BST?  
+✔️ What is the average and worst time complexity of inserting into a BST?  
+✔️ What is the average and worst time complexity of deleting from a BST?  
+✔️ What is the average and worst time complexity of searching a BST?  
 
 ##### Read/Watch/Review
 Before attending class, please complete the material below:
 - Read [BST Analysis](/files/bst-analysis.pdf)
-	- Note that the worst-case given assumes a balanced tree, ideally want to define in terms of height rather than nodes (since height will give us a more accurate answer)
+	- Note that the worst-case given assumes a balanced tree; ideally want to define in terms of height rather than nodes (since height will give us a more accurate answer). Watch video below to understand time complexity in terms of height.
 - Watch [Time Complexities of Binary Search Trees Operations](https://www.youtube.com/watch?v=tEoyeoHmqlk) (10 min)
 
 ##### In Class
