--- a/_docs/weekly/wk10.md
+++ b/_docs/weekly/wk10.md
@@ -7,7 +7,7 @@ permalink: /wk10/
 <br><br>
 On this page:  
 ✔️ [Pre-reading for Tuesday 3/30](#tues)  
-✔️ [Pre-reading for Thursday 4/1](#thurs) (coming soon)
+✔️ [Pre-reading for Thursday 4/1](#thurs) 
 
 ---
 
@@ -33,4 +33,21 @@ In today's class we'll be reviewing and applying BST Analysis concepts, as well 
 
 #### Pre-Reading for BST Implementation, Thursday 4/1 {#thurs}
 
-> Coming Soon
+##### Essential Questions
+
+<br>
+✔️ What're the steps necessary to **insert an element** into a BST?  
+✔️ What're the steps necessary to **delete an element** from a BST?  
+✔️ What're the steps necessary to **search for an element** in a BST?  
+✔️ What're the steps necessary to determine the height of a BST?  
+✔️ What're the steps necessary to determine if a BST is full or complete?  
+
+##### Read/Watch/Review
+Before attending class, please complete the material below:
+- Read the [Lab 10 Handout](/lab10)
+- Watch [Binary Search Trees (BST) Explained in Animated Demo](https://www.youtube.com/watch?v=mtvbVLK5xDQ) (6 min)
+- Review the [slides from Tuesday's class](/slides) (for height)
+- Review the [Lab 9 Handout](/lab10) (for fullness and completeness)
+
+##### In Class
+In today's class we'll be continuing to work on our lab's BST implementation.
