tree guide added

--- a/_docs/weekly/wk11.md
+++ b/_docs/weekly/wk11.md
@@ -39,6 +39,7 @@ Some additional optional material:
 - Read [Red-Black Tree: Self-Balanced Binary Search Trees Explained with Examples](https://www.freecodecamp.org/news/red-black-trees/)
 - Read [Red Black Tree (Properties, Advantages, Inserting Nodes)](https://www.includehelp.com/data-structure-tutorial/red-black-tree.aspx)
 
+> **NEW:** Check out this [Tree Guide](http://bit.ly/trees-guide) a previous student made for the class!
 
 ##### In Class
 In today's class we'll be reviewing the properties of red-black, AVL, and other self-balancing trees.
