--- a/_docs/weekly/wk11.md
+++ b/_docs/weekly/wk11.md
@@ -7,7 +7,7 @@ permalink: /wk11/
 <br><br>
 On this page:  
 ✔️ [Pre-reading for Tuesday 4/6](#tues)  
-✔️ [Pre-reading for Thursday 4/8](#thurs) (Coming soon)
+✔️ [Pre-reading for Thursday 4/8](#thurs)
 
 ---
 
@@ -48,4 +48,19 @@ In today's class we'll be reviewing the properties of red-black, AVL, and other 
 
 #### Pre-Reading for Sets & Maps, Thursday 4/8 {#thurs}
 
-> Coming soon
+##### Essential Questions
+
+<br>
+✔️ How does a set work and when should it be used?  
+✔️ How does a map work and when should it be used?  
+
+##### Read/Watch/Review
+Before attending class, please complete the material below:
+- Read [std::set](https://www.cplusplus.com/reference/set/set/)
+- Read [std::map](https://www.cplusplus.com/reference/map/map/)
+- Watch [Sets and Maps - Udacity](https://www.youtube.com/watch?v=gmIb-qZhTDQ) (2 min)
+- Watch [Set and Maps](https://www.youtube.com/watch?v=UTvZT8ppAG4) (7 min)
+- Read
+
+##### In Class
+In today's class we'll be applying sets and maps to use.
