--- a/_docs/weekly/wk11/wt13.md
+++ b/_docs/weekly/wk11/wt13.md
@@ -102,7 +102,7 @@ int main() {
     table.open("tabledata");  
     //Step 2 (part 2): (Check for failure to open.)
     if(table.fail()){                           
-        cerr << "Can't open tabledata\n";
+        std::cerr << "Can't open tabledata\n";
         return 1;
     }
     //Step 3: Read from the file. Specifically get a line of data from table, store in 'line'
