added csv reading example

--- a/_docs/weekly/wk11/wt13.md
+++ b/_docs/weekly/wk11/wt13.md
@@ -119,6 +119,8 @@ int main() {
 }
 ```
 
+> To see an example of CSV reading in action, check out this [repl.it](https://replit.com/@VictoriaChvez/full-csv-reading) where I number each row and column for each entry of a small CSV.
+
 ---
 
 #### Your Task {#task}
