--- a/_docs/weekly/wk11/wt13.md
+++ b/_docs/weekly/wk11/wt13.md
@@ -145,7 +145,8 @@ Write the question you're asking, as a comment, above the function call that giv
 > **Some hints:** 
 - You can remove the first row of your CSV file if it's a header row (just make sure to keep track of  column titles on your own!)
 - If you only care about, say column 1 and 3, you can keep track of which column you're on via a counter.
-- An example of a question that could be answered via a set is: "How many states had an average of at least 8in of rainfall?" or "How many states had no rainfall?". In that case, as I'm reading my CSV, I'd check the condition (>= 8in of rainfall for the first question, ==0 for the second one) and add the state to the set if the condition is true
+- An example of a question that could be answered via a set is: "How many states had an average of at least 8in of rainfall?" or "How many states had no rainfall?". In that case, as I'm reading my CSV, I'd check the condition (>= 8in of rainfall for the first question, ==0 for the second one) and add the state to the set if the condition is true.
+- An example of a question that could be answered via a map is: "How much rain did RI get in 2019?" or "Which of the states in New England got the most amount of rain in February?"
 
 ---
 
