--- a/_docs/weekly/wk11/wt13.md
+++ b/_docs/weekly/wk11/wt13.md
@@ -132,7 +132,12 @@ You will be working with a real-world dataset. Find a dataset you're interested 
 - [Kaggle Datasets](https://www.kaggle.com/datasets?fileType=csv)
 - [Data.gov Datasets](https://catalog.data.gov/dataset?res_format=CSV)
 
-Identify what the data is, how it's stored, and what you can ask about it. Add the data necessary to answer your questions to your map and set and then use the built-in functions for maps and sets to answer your questions.
+> 1. Identify what the data is
+2. Identify how the data is stored
+3. Come up with 1 question you can ask about it that can be answered by using a set
+4. Come up with 1 question you can ask about it that can be answered by using a map
+5. Add **only the necessary data** to answer your questions to your map and set 
+6. Use the built-in functions for maps and sets to answer your questions
 
 You will be given [wt13.cpp](/weekly/wk11/wt13.cpp). Fill in the required functions, write your own test cases, and then use the built-in functions for maps and sets to answer your questions. 
 
@@ -140,7 +145,7 @@ Write the question you're asking, as a comment, above the function call that giv
 
 - How many X have Y?
 - How many Y does a specific X have?
-- Which X has the most y?
+- Which X has the most Y?
 
 > **Some hints:** 
 - You can remove the first row of your CSV file if it's a header row (just make sure to keep track of  column titles on your own!)
