--- a/_docs/weekly/wk11/wt13.md
+++ b/_docs/weekly/wk11/wt13.md
@@ -56,7 +56,7 @@ int main() {
 
     mymap["dog"] = 7;
     mymap.emplace("cat", 4); // This is the same as mymap["cat"] = 4
-    mymap.insert({{"fish", 11}}); // This is the same as mymap["fish"] = 11
+    mymap.insert({"fish", 11}); // This is the same as mymap["fish"] = 11
     mymap["cat"]++;
 
     std::cout << mymap["dog"] << std::endl; // Prints 7
