--- a/_docs/weekly/wk12.md
+++ b/_docs/weekly/wk12.md
@@ -20,6 +20,7 @@ Before attending class, please complete the material below and use the following
 ✔️ What is heapsort's time complexity and why?  
 ✔️ What is a graph and what purpose does it serve?  
 ✔️ What are the various types of graphs and some of their uses/applications?  
+✔️ What are some ways to represent graphs in code?  
 
 ##### Read/Watch/Review
 Before attending class, please complete the material below:
@@ -28,6 +29,7 @@ Before attending class, please complete the material below:
 - Watch [Heap sort in 4 minutes](https://www.youtube.com/watch?v=2DmK_H7IdTo) (4 min)
 - Read [Don’t Understand Graphs? Here’s Why You Should Study Graphs in Computer Science](https://bennettgarner.medium.com/what-the-graph-a-beginners-simple-intro-to-graphs-in-computer-science-3808d542a0e5)
 - Read [Introduction to Graphs](http://pages.cs.wisc.edu/~paton/readings/Old/fall08/GRAPH.html)
+- Watch [Introduction to Graph Theory: A Computer Science Perspective](https://www.youtube.com/watch?v=LFKZLXVO-Dg) (16 min)
 
 ##### In Class
 In today's class we'll be reviewing heapsort and introductory graph concepts.
