wt13 piazza checkoff

--- a/_docs/weekly/wk11/wt13.md
+++ b/_docs/weekly/wk11/wt13.md
@@ -165,7 +165,7 @@ Write the question you're asking, as a comment, above the function call that giv
 ---
 
 #### Handing in {#submit}
-Please get this wet toe checked off at hours.
+Please get this optional lab checked off at hours or via a private Piazza post.
 
 ---
 
