wk 12 thurs readings

--- a/_docs/weekly/wk12.md
+++ b/_docs/weekly/wk12.md
@@ -7,7 +7,7 @@ permalink: /wk12/
 <br><br>
 On this page:  
 ✔️ [Pre-reading for Tuesday 4/13](#tues)  
-✔️ [Pre-reading for Thursday 4/15](#thurs) (coming soon)
+✔️ [Pre-reading for Thursday 4/15](#thurs)
 
 ---
 
@@ -38,4 +38,22 @@ In today's class we'll be reviewing heapsort and introductory graph concepts.
 
 #### Pre-Reading for BFS & DFS, Thursday 4/15 {#thurs}
 
-> Coming soon
+##### Essential Questions
+Before attending class, please complete the material below and use the following questions to guide your note-taking:  
+<br>
+✔️ How does BFS work?  
+✔️ How does DFS work?  
+✔️ What's the time complexity of BFS?  
+✔️ What's the time complexity of DFS?  
+
+
+##### Read/Watch/Review
+- Review "Tree Terms" and "BFS & DFS" from [Evan's Tree Guide](https://bit.ly/trees-guide)
+- Read [Lab 12 Handout](/lab12)
+- Watch [Lab 12, Part 2 explained](https://youtu.be/c8TGGuXL0no) (11 min)
+- Watch [Depth First Search vs Breadth First Search (Graph)](https://www.youtube.com/watch?v=62IcXF_OF3k) (6 min)
+- Watch [Advanced Data Structures: BFS and DFS Time Complexity](https://www.youtube.com/watch?v=ZpOy0-QBVPM) (6 min)
+
+##### In Class
+In today's class we'll taking a recap wet toe and continuing work on Lab 12. 
+
