wk 12 thurs readings reorder

--- a/_docs/weekly/wk12.md
+++ b/_docs/weekly/wk12.md
@@ -48,7 +48,7 @@ Before attending class, please complete the material below and use the following
 
 
 ##### Read/Watch/Review
-- Review "Tree Terms" and "BFS & DFS" from [Evan's Tree Guide](https://bit.ly/trees-guide)
+- Read "Tree Terms" and "BFS & DFS" from [Evan's Tree Guide](https://bit.ly/trees-guide)
 - Read [Lab 12 Handout](/lab12)
 - Watch [Lab 12, Part 2 explained](https://youtu.be/c8TGGuXL0no) (11 min)
 - Watch [Depth First Search vs Breadth First Search (Graph)](https://www.youtube.com/watch?v=62IcXF_OF3k) (6 min)
