--- a/_docs/weekly/wk13.md
+++ b/_docs/weekly/wk13.md
@@ -35,6 +35,22 @@ In today's class we'll be reviewing hashtables.
 
 ---
 
-#### Pre-Reading for Interview Prep, Thursday 4/22 {#thurs}
+#### Pre-Reading for Q&A / Interview Prep, Thursday 4/22 {#thurs}
 
-> Coming Soon
+##### Essential Questions
+Before attending class, please complete the material below and use the following questions to guide your note-taking:  
+<br>
+✔️ How can I use what I've learned in this class to prepare for technical interviews?  
+✔️ What kinds of questions should I expect during an interview?  
+✔️ What is Dijkstra's algorithm and purpose does it serve?  
+✔️ How does Dijkstra's algorithm work?  
+
+##### Read/Watch/Review
+- Read [Getting a Gig: A Guide](https://github.com/cassidoo/getting-a-gig)
+- Read [How Data Structures and Algorithms are important for Computer Science Graduates?](https://www.synergisticit.com/how-data-structures-and-algorithms-are-important-for-computer-science-graduates/)
+- Read [Dijkstra's Algorithm](https://www.programiz.com/dsa/dijkstra-algorithm)
+	- For a step-by-step explanation and visualization, read [Dijkstra's Shortest Path Algorithm - A Detailed and Visual Introduction](https://www.freecodecamp.org/news/dijkstras-shortest-path-algorithm-visual-introduction/)
+- Review [Practice Interview Questions and Sites](/prep#challenges)
+
+##### In Class
+In today's class we'll be reviewing tips and tricks for interview questions and I'll be aswering any course related questions you may have. You'll also have time to finish working on Lab 13.
