updated links for archiving

--- a/_docs/weekly/wk10.md
+++ b/_docs/weekly/wk10.md
@@ -22,12 +22,12 @@ Before attending class, please complete the material below and use the following
 
 ##### Read/Watch/Review
 Before attending class, please complete the material below:
-- Read [BST Analysis](/files/bst-analysis.pdf)
+- Read [BST Analysis](/sp21-archive/files/bst-analysis.pdf)
 	- Note that the worst-case given assumes a balanced tree; ideally want to define in terms of height rather than nodes (since height will give us a more accurate answer). Watch video below to understand time complexity in terms of height.
 - Watch [Time Complexities of Binary Search Trees Operations](https://www.youtube.com/watch?v=tEoyeoHmqlk) (10 min)
 
 ##### In Class
-In today's class we'll be reviewing and applying BST Analysis concepts, as well as reviewing [Final Project](/final) info.
+In today's class we'll be reviewing and applying BST Analysis concepts, as well as reviewing [Final Project](/sp21-archive/final) info.
 
 ---
 
@@ -44,10 +44,10 @@ In today's class we'll be reviewing and applying BST Analysis concepts, as well 
 
 ##### Read/Watch/Review
 Before attending class, please complete the material below:
-- Read the [Lab 10 Handout](/lab10)
+- Read the [Lab 10 Handout](/sp21-archive/lab10)
 - Watch [Binary Search Trees (BST) Explained in Animated Demo](https://www.youtube.com/watch?v=mtvbVLK5xDQ) (6 min)
-- Review the [slides from Tuesday's class](/slides) (for height)
-- Review the [Lab 9 Handout](/lab10) (for fullness and completeness)
+- Review the [slides from Tuesday's class](/sp21-archive/slides) (for height)
+- Review the [Lab 9 Handout](/sp21-archive/lab10) (for fullness and completeness)
 
 ##### In Class
 In today's class we'll be continuing to work on our lab's BST implementation.
