--- a/_docs/weekly/wk11/wt13.md
+++ b/_docs/weekly/wk11/wt13.md
@@ -139,7 +139,7 @@ You will be working with a real-world dataset. Find a dataset you're interested 
 5. Add **only the necessary data** to answer your questions to your map and set 
 6. Use the built-in functions for maps and sets to answer your questions
 
-You will be given [wt13.cpp](/weekly/wk11/wt13.cpp). Fill in the required functions, write your own test cases, and then use the built-in functions for maps and sets to answer your questions. 
+You will be given [wt13.cpp](/sp21-archive/weekly/wk11/wt13.cpp). Fill in the required functions, write your own test cases, and then use the built-in functions for maps and sets to answer your questions. 
 
 Write the question you're asking, as a comment, above the function call that gives you the answer to it and then comment what the answer is. Some examples *types of questions*:
 
@@ -178,7 +178,7 @@ This assignment covers the **non-negotiable** topic of `sets & maps` and your le
 - To demonstrate `competence` of these topics, you must:
     - Successfully meet [requirements](#reqs) **1 through 3**
 
-> To receive any credit at all, you **must abide by our [Collaboration and Academic Honesty Policy](/policies/#integrity)**. Failure to do so may result in a failing grade in the class and/or further disciplinary action.
+> To receive any credit at all, you **must abide by our [Collaboration and Academic Honesty Policy](/sp21-archive/policies/#integrity)**. Failure to do so may result in a failing grade in the class and/or further disciplinary action.
 
 ---
 
