--- a/_docs/weekly/wk12.md
+++ b/_docs/weekly/wk12.md
@@ -49,7 +49,7 @@ Before attending class, please complete the material below and use the following
 
 ##### Read/Watch/Review
 - Read "Tree Terms" and "BFS & DFS" from [Evan's Tree Guide](https://bit.ly/trees-guide)
-- Read [Lab 12 Handout](/lab12)
+- Read [Lab 12 Handout](/sp21-archive/lab12)
 - Watch [Lab 12, Part 2 explained](https://youtu.be/c8TGGuXL0no) (11 min)
 - Watch [Depth First Search vs Breadth First Search (Graph)](https://www.youtube.com/watch?v=62IcXF_OF3k) (6 min)
 - Watch [Advanced Data Structures: BFS and DFS Time Complexity](https://www.youtube.com/watch?v=ZpOy0-QBVPM) (6 min)
