--- a/_docs/weekly/wk13.md
+++ b/_docs/weekly/wk13.md
@@ -50,7 +50,7 @@ Before attending class, please complete the material below and use the following
 - Read [How Data Structures and Algorithms are important for Computer Science Graduates?](https://www.synergisticit.com/how-data-structures-and-algorithms-are-important-for-computer-science-graduates/)
 - Read [Dijkstra's Algorithm](https://www.programiz.com/dsa/dijkstra-algorithm)
 	- For a step-by-step explanation and visualization, read [Dijkstra's Shortest Path Algorithm - A Detailed and Visual Introduction](https://www.freecodecamp.org/news/dijkstras-shortest-path-algorithm-visual-introduction/)
-- Review [Practice Interview Questions and Sites](/prep#challenges)
+- Review [Practice Interview Questions and Sites](/sp21-archive/prep#challenges)
 
 ##### In Class
 In today's class we'll be reviewing tips and tricks for interview questions and I'll be aswering any course related questions you may have. You'll also have time to finish working on Lab 13.
